# pinned-datamatrix-label-generator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: create_examples.py
pinned_datamatrix/: __main__.py  datamatrix_generator.py  label_generator.py  sheet_generator.py  styles.py  utils.py
tests/: test_datamatrix_generator.py  test_label_generator.py  test_main.py  test_sheet_generator.py
