[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinned_datamatrix"
license = "MIT"
authors = [
    { name = "Laurits Fredsgaard Larsen", email = "" },
]
dynamic = ["version"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]

[tool.hatch.version]
path = "pinned_datamatrix/__init__.py"

[tool.poetry]
name = "pinned_datamatrix"
version = "0.1.0"
description = "A library for generating datamatrix barcodes"
authors = ["Laurits Fredsgaard Larsen <>"]

[tool.poetry.dependencies]
python = "^3.10"
pylibdmtx = "^0.1.10"
numpy = "^1.25.1"
Pillow = "^10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
zxing-cpp = "^2.1.0"
reportlab = "^4.0.4"
svglib ="^1.5.1"