[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinned_datamatrix"
dynamic = ["version"]
license = "MIT"
authors = [
    { name = "Laurits Fredsgaard Larsen", email = "79061425+lauritsf@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]

# Dependency specifications
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0.4",
    "pylibdmtx>=0.1.10",
    "numpy~=1.26.4",
    "Pillow~=10.0.0",
    "svglib~=1.5.1",
    "rlPyCairo~=0.3.0",
    "click>=8.1.6, <9.0.0",
    "tqdm~=4.65.2",
]

# Entry points
[project.scripts]
pinned_datamatrix = "pinned_datamatrix.__main__:main"

# Optional dependencies
[project.optional-dependencies]
dev = ["pytest~=6.2.5", "zxing-cpp~=2.1.0", "ruff~=0.4.5"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-ra -q 
--import-mode=importlib 
-W ignore::DeprecationWarning:pylibdmtx.wrapper 
-W ignore::DeprecationWarning:importlib._bootstrap:283
"""
testpaths = ["tests"]

# Formatting
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [ # https://docs.astral.sh/ruff/linter/#rule-selection
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

# Versioning
[tool.hatch.version]
path = "pinned_datamatrix/__init__.py"
